--- a/includes/player.html
+++ b/includes/player.html
@@ -54,11 +54,12 @@
 
 body {
   background-color:#000;
+  max-width: 480px;
 }
 #container {
-  margin:20px auto;
-  width:480px;
-  height:75px;
+  margin: 20px auto;
+  max-width: 480px;
+  height: 75px;
 }
 #player {
   background-color:#000;
