--- a/includes/player.html
+++ b/includes/player.html
@@ -436,7 +436,7 @@ function ss_get_url_param(name) {
 };
 
 /* Print values in HTML */
-if ( validate_url(ss_get_url_param('file')) ) {
+if ( ss_validate_url(ss_get_url_param('file')) ) {
     document.getElementsByTagName("audio")[0].setAttribute("src", encodeURI(ss_get_url_param('file')));
     document.getElementsByTagName("h1")[0].textContent = ss_get_url_param('title');
     document.getElementsByTagName("h2")[0].textContent = 'by ' + ss_get_url_param('author');
@@ -455,7 +455,7 @@ if ( validate_url(ss_get_url_param('file')) ) {
  * @param   string   URL
  * @return  boolean  True if passed valid URL, else false.
  */
-function validate_url( url ) {
+function ss_validate_url( url ) {
     return /^(?:(?:(?:https?|ftp):)?\/\/)(?:\S+(?::\S*)?@)?(?:(?!(?:10|127)(?:\.\d{1,3}){3})(?!(?:169\.254|192\.168)(?:\.\d{1,3}){2})(?!172\.(?:1[6-9]|2\d|3[0-1])(?:\.\d{1,3}){2})(?:[1-9]\d?|1\d\d|2[01]\d|22[0-3])(?:\.(?:1?\d{1,2}|2[0-4]\d|25[0-5])){2}(?:\.(?:[1-9]\d?|1\d\d|2[0-4]\d|25[0-4]))|(?:(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)(?:\.(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)*(?:\.(?:[a-z\u00a1-\uffff]{2,})).?)(?::\d{2,5})?(?:[/?#]\S*)?$/i.test( url );
 }
 
